# config/routesValues.js
@@ -5,4 +5,5 @@ exports.routeValues = {
   "/application/tracker-list": "c2a04e70f16541f5b52f1b0803ee46d3",
   "/application/agent-details": "c2a04e70f16541f5b52f1b0803ee46d3",
   "/application/required-doc-list": "c2a04e70f16541f5b52f1b0803ee46d3",
+  "/application/upload-document": "c2a04e70f16541f5b52f1b0803ee46d3"
 };
